--- a/assets/image-banner.css
+++ b/assets/image-banner.css
@@ -1,8 +1,59 @@
 .image-banner {
-  min-height: 300px;
+  position: absolute;
+  z-index: 2;
   width: 100%;
-  background-color: #D9D9D9;
+  height: 100%;
+  padding-bottom: 34px;
+}
+
+.banner-blocks {
+  width: 352px;
+  height: 100%;
   display: flex;
-  align-items: center;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.banner-heading {
+  color: #2bd896;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.4px;
+  text-transform: uppercase;
+}
+
+.banner-text {
+  margin: 0px;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.button {
+  border-radius: 5px;
+  display: flex;
+  width: 236px;
+  padding: 10px;
   justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #c5474b;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  text-decoration: none;
 }
