--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,17 +1,143 @@
 {{ 'image-banner.css' | asset_url | stylesheet_tag }}
 
-<div class="image-banner">
-  <div>
-    <h2>Message Text Here</h2>
+{%- style -%}
+  #Banner-{{ section.id }} {
+    height: 471px;
+    width: 100%;
+    position: relative;
+    background-image: url("{{ section.settings.image | image_url }}");
+    background-size: cover;
+    background-position: center center;
+  }
+  #Overlay-{{ section.id }} {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    background: #000000;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};
+  }
+{%- endstyle -%}
+
+<div id="Banner-{{ section.id }}">
+  <div id="Overlay-{{ section.id }}"></div>
+  <div class="image-banner">
+    <div class="page-width" style="height:100%;">
+      <div class="banner-blocks">
+        {%- for block in section.blocks -%}
+          {%- case block.type -%}
+            {%- when 'heading' -%}
+              <h4 class="banner-heading" {{ block.shopify_attributes }}>
+                {{ block.settings.heading }}
+              </h4>
+            {%- when 'text' -%}
+              <h1 class="banner-text {{ block.settings.text_style }}" {{ block.shopify_attributes }}>
+                {{ block.settings.text }}
+              </h1>
+            {%- when 'button' -%}
+              {%- if block.settings.button_label != blank -%}
+                <a
+                  {% if block.settings.button_link == blank %}
+                    role="link" aria-disabled="true"
+                  {% else %}
+                    href="{{ block.settings.button_link }}"
+                  {% endif %}
+                  class="button"
+                >
+                  {{- block.settings.button_label | escape -}}
+                </a>
+              {%- endif -%}
+          {%- endcase -%}
+        {%- endfor -%}
+      </div>
+    </div>
   </div>
 </div>
 
 {% schema %}
 {
   "name": "Image banner",
+  "settings": [
+    {
+      "type": "image_picker",
+      "id": "image",
+      "label": "Background image"
+    },
+    {
+      "type": "range",
+      "id": "image_overlay_opacity",
+      "min": 0,
+      "max": 100,
+      "step": 10,
+      "unit": "%",
+      "label": "Overlay opacity",
+      "default": 40
+    }
+  ],
+  "blocks": [
+    {
+      "type": "heading",
+      "name": "Heading",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "inline_richtext",
+          "id": "heading",
+          "default": "SHOPIFY ECOMMERCE EXPERTS.",
+          "label": "Heading"
+        }
+      ]
+    },
+    {
+      "type": "text",
+      "name": "Text",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "inline_richtext",
+          "id": "text",
+          "default": "WE DESIGN, BUILD AND OPTIMISE EXCEPTIONAL ECOMMERCE WEBSITES.",
+          "label": "Description"
+        }
+      ]
+    },
+    {
+      "type": "button",
+      "name": "Button",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "button_label",
+          "default": "START YOUR PROJECT",
+          "label": "Button label",
+          "info": "Leave the label blank to hide the button."
+        },
+        {
+          "type": "url",
+          "id": "button_link",
+          "label": "Button link"
+        }
+      ]
+    }
+  ],
   "presets": [
     {
-      "name": "Image banner"
+      "name": "Image banner",
+      "blocks": [
+        {
+          "type": "heading"
+        },
+        {
+          "type": "text"
+        },
+        {
+          "type": "button"
+        }
+      ]
     }
   ]
 }
