--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,3 +1,5 @@
+{{ 'header.css' | asset_url | stylesheet_tag }}
+
 <header class="header page-width">
   <h1 class="header__heading">
     <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset">
@@ -7,14 +9,17 @@
           {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
           {% capture sizes %}(max-width: {{ settings.logo_width | times: 2 }}px) 50vw, {{ settings.logo_width }}px{% endcapture %}
           {% capture widths %}{{ settings.logo_width }}, {{ settings.logo_width | times: 1.5 | round }}, {{ settings.logo_width | times: 2 }}{% endcapture %}
-          {{ settings.logo | image_url: width: 600 | image_tag:
-            class: 'header__heading-logo motion-reduce',
-            widths: widths,
-            height: logo_height,
-            width: settings.logo_width,
-            alt: logo_alt,
-            sizes: sizes,
-            preload: true
+          {{
+            settings.logo
+            | image_url: width: 600
+            | image_tag:
+              class: 'header__heading-logo motion-reduce',
+              widths: widths,
+              height: logo_height,
+              width: settings.logo_width,
+              alt: logo_alt,
+              sizes: sizes,
+              preload: true
           }}
         </div>
       {%- else -%}
@@ -25,13 +30,11 @@
 
   <div class="header__icons">
     <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
-      {%- liquid
-        if cart == empty
-          render 'icon-cart-empty'
-        else
-          render 'icon-cart'
-        endif
-      -%}
+      {% if cart == empty %}
+        {% render 'icon-cart-empty' %}
+      {% else %}
+        {% render 'icon-cart' %}
+      {% endif %}
       <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
       {%- if cart != empty -%}
         <div class="cart-count-bubble">
