--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -69,6 +69,7 @@
             <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
           {%- endunless -%}
           {% comment %} Product Quantity {% endcomment %}
+          <input type="hidden" name="quantity" value="1">
           {% comment %} Product Buy Button {% endcomment %}
           <button
             type="submit"
