--- a/assets/featured-product.css
+++ b/assets/featured-product.css
@@ -27,7 +27,7 @@
   text-transform: uppercase;
 }
 
-.variant-select {
+.featured-product-form-input {
   padding: 1rem;
   border-radius: 4px;
   color: #000;
