--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,6 +28,8 @@
 
     {% render 'meta-tags' %}
 
+    <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+
     {{ content_for_header }}
 
     {%- liquid
