product schema in accordion

--- a/sections/product-more-info.liquid
+++ b/sections/product-more-info.liquid
@@ -77,6 +77,11 @@
   },
   "settings": [
     {
+      "type": "product",
+      "id": "product",
+      "label": "Product"
+    },
+    {
       "type": "inline_richtext",
       "id": "heading",
       "label": "t:sections.collapsible_content.settings.heading.label",
