--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,6 +1,21 @@
+{{ 'footer.css' | asset_url | stylesheet_tag }}
+
 <footer class="footer">
   <div class="page-width">
-    Footer Here
+    <div class="footer-container">
+      <div class="footer-info">
+        <h5 class="footer-contact">CONTACT US</h5>
+        <div class="footer-left-content">
+          <p class="footer-email">hello@shopify.com</p>
+          <p class="footer-copyright">Copyright 2023 Drive Digital. All rights reserved.</p>
+        </div>
+      </div>
+      <div class="footer-nav-right">
+        <a href="" class="footer-nav-link">Privacy Policy</a>
+        <a href="" class="footer-nav-link">Terms and Conditions</a>
+        <a href="" class="footer-nav-link">Returns</a>
+      </div>
+    </div>
   </div>
 </footer>
 
