--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -2,7 +2,7 @@
 {% assign product = section.settings.product %}
 {% assign current_variant = product.selected_or_first_available_variant %}
 
-<div class="page-width">
+<div class="page-width" style="padding: 40px 0px;">
   {% if product != blank %}
     <div class="featured-product">
       {% comment %} Product Image {% endcomment %}
@@ -28,7 +28,7 @@
           {%- endunless -%}
         </div>
         {% comment %} Product Description {% endcomment %}
-        <p class="featured-product-description">{{ product.description | truncatewords: 55 }}</p>
+        <div class="featured-product-description">{{ product.description | truncatewords: 55 }}</div>
         {% comment %} Product Tags {% endcomment %}
         <div class="featured-product-tags">
           {%- for tag in product.tags -%}
