--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -1,15 +1,25 @@
 .accordion-container {
   width: 100%;
-  padding-bottom: 80px;
+  padding: 40px 0px 0px 0px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 4px;
+}
+
+@media only screen and (min-width: 640px) {
+  .accordion-container {
+    padding: 0px 0px 80px 0px;
+    align-items: center;
+  }
 }
 
 .accordion {
   width: 100%;
   max-width: 550px;
+}
+
+@media only screen and (min-width: 640px) {
 }
 
 .accordion details[open] > summary .icon-caret {
@@ -18,38 +28,47 @@
 
 .accordion-header {
   display: flex;
-  width: 100%;
   padding: 12px 19px;
   justify-content: center;
   align-items: center;
   gap: 10px;
+  align-self: stretch;
   border-bottom: 2px solid #eeeeee;
 }
 
-.accordion-content {
-  display: flex;
-  width: 100%;
-  padding: 12px 19px;
-  /* justify-content: center; */
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  /* border: 1px solid #000; */
-  color: #000;
-  font-family: Montserrat;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+@media only screen and (min-width: 640px) {
 }
 
 .accordion-title {
-  flex-shrink: 0;
-  flex-grow: 1;
+  flex: 1 0 0;
   color: #000;
   font-family: Montserrat;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+@media only screen and (min-width: 640px) {
+}
+
+.accordion-content {
+  display: flex;
+  padding: 12px 19px;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  color: #000;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+@media only screen and (min-width: 640px) {
+  .accordion-content {
+    align-items: center;
+    font-size: 14px;
+  }
 }
