--- a/assets/featured-product.css
+++ b/assets/featured-product.css
@@ -1,14 +1,39 @@
 .featured-product {
   width: 100%;
-  padding: 8rem 0rem;
   display: flex;
-  gap: 20px;
+  padding: 0px 4px;
+  flex-direction: column;
+  align-items: center;
+  gap: 13px;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product {
+    padding: 8rem 0rem;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 20px;
+  }
+}
+
+@media only screen and (min-width: 640px) {
 }
 
 .featured-product-content {
   display: flex;
+  padding: 10px;
   flex-direction: column;
+  align-items: flex-start;
   gap: 16px;
+  align-self: stretch;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-content {
+    padding: 0px;
+    align-items: stretch;
+    align-self: auto;
+  }
 }
 
 .featured-product-form {
@@ -17,14 +42,28 @@
   gap: 16px;
 }
 
+@media only screen and (min-width: 640px) {
+  .featured-product-form {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+}
+
 .featured-product-title {
   color: #000;
   font-family: Poppins;
-  font-size: 22px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-title {
+    font-size: 22px;
+  }
 }
 
 .featured-product-form-input {
@@ -42,30 +81,65 @@
   text-transform: uppercase;
 }
 
+@media only screen and (min-width: 640px) {
+  .featured-product-form-input {
+    /* all: unset; */
+    width: 300px;
+    border: 1px solid #d9d9d9;
+    padding: 1rem;
+    border-radius: 4px;
+    color: #000;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+  }
+}
+
 .featured-product-price {
   display: flex;
   align-items: baseline;
-  gap: 11px;
+  gap: 13px;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-price {
+    gap: 11px;
+  }
 }
 
 .price-tag {
   color: #000;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
 }
 
+@media only screen and (min-width: 640px) {
+  .price-tag {
+    font-size: 14px;
+  }
+}
+
 .compare-to-price {
   color: #d9d9d9;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+}
+
+@media only screen and (min-width: 640px) {
+  .compare-to-price {
+    font-size: 14px;
+  }
 }
 
 .save-discount {
@@ -75,6 +149,9 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+@media only screen and (min-width: 640px) {
 }
 
 .price-soldout {
@@ -89,28 +166,48 @@
   line-height: normal;
 }
 
+@media only screen and (min-width: 640px) {
+}
+
 .featured-product-description {
   color: #000;
   font-family: Montserrat;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: 0.7px;
+  line-height: 20px; /* 166.667% */
+  letter-spacing: 0.6px;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-description {
+    font-size: 14px;
+    letter-spacing: 0.7px;
+  }
 }
 
 .featured-product-tags {
   display: flex;
   align-items: center;
+  align-content: center;
   gap: 16px;
-  /* display: flex;
-    align-items: baseline;
-    justify-content: flex-start;
-    gap: 16px; */
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-tags {
+    align-content: stretch;
+    align-self: auto;
+    flex-wrap: nowrap;
+  }
 }
 
 .featured-product-tag-separator:first-child {
   display: none;
+}
+
+@media only screen and (min-width: 640px) {
 }
 
 .featured-product-tag-separator {
@@ -119,32 +216,50 @@
   fill: #d9d9d9;
 }
 
+@media only screen and (min-width: 640px) {
+}
+
 .featured-product-tag {
   color: #818181;
   font-family: Montserrat;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: 0.7px;
+  line-height: 20px; /* 166.667% */
+  letter-spacing: 0.6px;
+}
+
+@media only screen and (min-width: 640px) {
+  .featured-product-tag {
+    font-size: 14px;
+    letter-spacing: 0.7px;
+  }
 }
 
 .button {
-  border: 1px solid #c5474b;
-  border-radius: 5px;
   display: flex;
-  width: 236px;
+  width: 186px;
   padding: 10px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  background-color: #c5474b;
+  border-radius: 5px;
+  background: #c6474b;
   color: #fff;
   font-family: Montserrat;
-  font-size: 14px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+  border: 1px solid #c5474b;
   text-decoration: none;
+}
+
+@media only screen and (min-width: 640px) {
+  .button {
+    display: flex;
+    width: 236px;
+    font-size: 14px;
+  }
 }
