--- a/assets/theme.css
+++ b/assets/theme.css
@@ -215,15 +215,16 @@ h6,
   color: rgb(18, 18, 18);
 }
 
-.header__icon, .header__icon--cart .icon {
+.header__icon,
+.header__icon--cart .icon {
   height: 4.4rem;
   width: 4.4rem;
   padding: 0;
 }
 
 .footer {
-  border-top: 1px solid #D9D9D9;
-  padding-top: 20px;
+  border-top: 1px solid #d9d9d9;
+  /* padding-top: 20px; */
 }
 
 /* --------------------
