--- a/assets/footer.css
+++ b/assets/footer.css
@@ -112,7 +112,7 @@ footer {
 
 .footer-nav-right {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   align-content: center;
   align-self: stretch;
