--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -68,12 +68,12 @@
     {
       "type": "image_picker",
       "id": "image",
-      "label": "Background image"
+      "label": "Background image desktop"
     },
     {
       "type": "image_picker",
       "id": "image_mobile",
-      "label": "Background image"
+      "label": "Background image mobile"
     },
     {
       "type": "range",
