--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -10,8 +10,10 @@
     background-position: center center;
   }
   @media only screen and (min-width: 640px) {
-    height: 471px;
-    background-image: url("{{ section.settings.image | image_url }}");
+    #Banner-{{ section.id }} {
+      height: 471px;
+      background-image: url("{{ section.settings.image | image_url }}");
+    }
   }
   #Overlay-{{ section.id }} {
     content: '';
